Closed Bug 224525 Opened 22 years ago Closed 21 years ago

artifacts in the top of the Bookmarks manager when adding/removing lots of bookmarks to bookmark toolbar

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: juanlist, Assigned: sfraser_bugs)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.6a) Gecko/20031022 Camino/0.7+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.6a) Gecko/20031022 Camino/0.7+ When in the bookmark manager drag a bunch of bookmarks to the toolbar causing to the add a new row. Reproducible: Always Steps to Reproduce: 1. Make the window full height (top to bottom, my dock is left) 2. Switch to bookmark manager 3. Select a large group of bookmarks and add them to bookmark toolbar Actual Results: A new row is created and the bookmark manager titles are pushed down but the old ones are still visable. Expected Results: The row should be added pushing down on the bookmark manager but not leaving any artifacts. Tried to test against the latest nightly but it is crashing for me. Appears to be another minor glitch from the bookmark rewrite landing.
Attached image Image of glitch —
Confirmed using the 20031103 NB and panther.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino1.0
I'm guessing bug 276055 is a dupe of this, but I could be wrong. They look very similar.
*** Bug 276055 has been marked as a duplicate of this bug. ***
Some more recent screenshots in the dupe.
Summary: graphical glitch when adding lots of bookmarks to bookmark toolbar → artifacts in the top of the Bookmarks manager when adding/removing lots of bookmarks to bookmark toolbar
Taking
Assignee: pinkerton → sfraser_bugs
Target Milestone: Camino1.0 → Camino0.9
Fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: