Fix bug 224525: make sure we call setNeedsDisplay:YES on the browser content view after resizing it when the bookmarks toolbar height changes.